--- a/WEB PANEL/index.html
+++ b/WEB PANEL/index.html
@@ -13,14 +13,15 @@
 <script type="text/javascript">
 //EDIT UNDER THIS ONLY
 
-const  firebaseConfig = {
-apiKey: "API KEY",
-authDomain: "AUTH DOMAIN",
-databaseURL: "DATABSE URL",
-projectId: "PROJECT ID",
-storageBucket: "BUCKET URL",
-messagingSenderId: "SENDER ID",
-appId: "APP ID"
+const firebaseConfig = {
+  apiKey: "AIzaSyBjWBGR2WcR5uF9O3G6qne0Gr9vIbl6Qr8",
+  authDomain: "airavat-8f414.firebaseapp.com",
+  databaseURL: "https://airavat-8f414-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "airavat-8f414",
+  storageBucket: "airavat-8f414.firebasestorage.app",
+  messagingSenderId: "379117246160",
+  appId: "1:379117246160:web:27482b283917c6884970d5",
+  measurementId: "G-53KWD6XMN9"
 };
  
 
