--- a/WEB PANEL/index.html
+++ b/WEB PANEL/index.html
@@ -57,7 +57,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/en/5/5e/MrBeast_Logo.png" alt="Logo" class="w-20 drop-shadow-lg">
     </div>
     <h2 class="text-4xl font-extrabold text-center mb-6 glow">Welcome Back!</h2>
-    <form>
+    <form id="loginForm">
       <div class="mb-4">
         <label class="block text-gray-300 mb-2">Email</label>
         <input type="email" placeholder="you@example.com" class="w-full p-3 rounded-lg bg-gray-800 text-white border border-gray-700 focus:border-cyan-400 focus:ring-2 focus:ring-cyan-500">
@@ -70,5 +70,13 @@
     </form>
     <p class="text-center text-gray-400 mt-4">Don't have an account? <a href="#" class="link-glow">Sign Up</a></p>
   </div>
+
+  <script>
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      // Fake login then redirect
+      window.location.href = "airavat.html";  // Replace with the actual filename of your big AIRAVAT script
+    });
+  </script>
 </body>
 </html>
